# SimToPC

./: .gitignore  MEASURE_P6_VALIDATION_SPEC.txt  MEASURE_P7_TESTS_SPEC.txt  MEASURE_P8_REPRO_SPEC.txt  MEASURE_PLAN.txt  MEASURE_PROGRESS.txt  README.md  config.yml  create_and_train_surrogate_model.py  extract_geometric_quantities_from_results.py  extract_y_z_slice_meltpool.py  full_workflow.py  functions.py  functions_meltpool_geometry.py  generate_data.py  generate_data_relate_biot_deff.py  input_data.py  input_data_relate_biot_deff.py  measure_W_H_D.py  measure_W_H_D_relate_biot_deff.py  parameters.txt  parameters_relate_biot_deff.txt  postproc3.py  pyproject.toml  quantitiesFromMeltpool.py  quantities_from_meltpool.py  setup.py
COARSE/base_case_of2412/: Allrun_local  cells_PBF.py
COARSE/test_case_1/: full_workflow.py  functions.py  input_data.py  postproc2.py
base_case/: PowderBedHeight.pvd  PowderBed_Height.pvsm  cells_PBF.py  singleTrack.sh
docs/: OUTPUTS.md
input_files/: meluxina_inp.py
simtopc/: cli.py  config.py  measure_config.py  pipeline.py
src/: extract_meltpool.py  extract_x_z_slice_meltpool.py  extract_y_z_slice_meltpool.py  functions.py  functions_create_and_train_surrogate_model.py  functions_generate_data.py  functions_generate_data_relate_biot_deff.py  functions_measure_W_H_D.py  functions_measure_W_H_D_relate_biot_deff.py  quantities_from_meltpool.py
tests/: test_extraction_window.py  test_measure_config.py  test_measure_continuity.py  test_measure_main.py  test_measure_numerics.py
tools/: adapt_case_to_simtopc.py
(+346 files in other folders)
